--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -48,8 +48,9 @@
 .element {
   padding: 0.25rem;
   resize: both;
-  min-width: 5rem;
-  width: fit-content;
+  overflow: auto;
+  width: 10rem;
+  // width: fit-content;
   position: relative;
   &__delete {
     position: absolute;
@@ -61,5 +62,8 @@
     color: red;
     padding: 0;
     cursor: pointer;
+  }
+  &__image {
+    width: 100%;
   }
 }
