fixed some styling

--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -51,7 +51,7 @@
   overflow: auto;
   width: 10rem;
   // width: fit-content;
-  position: relative;
+  position: absolute;
   &__delete {
     position: absolute;
     top: 0;
