--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -1,26 +1,53 @@
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
+
 .portal-page {
-  display: flex;
 }
 
 .portal {
-  padding: 2rem;
-  background-color: lightseagreen;
   flex-grow: 1;
   height: 100vh;
   position: relative;
-  // overflow: hidden;
+  width: 100%; // overflow: hidden;
+  &__header {
+    // position: absolute;
+    margin: 1rem;
+    padding: 1rem;
+    z-index: 1;
+    background: $primary-medium;
+    border-radius: $border-radius;
+    display: flex;
+    align-items: end;
+  }
+  &__heading {
+    margin: 0;
+    margin-right: 1rem;
+    font-size: 3rem;
+  }
+  &__subheading {
+    // subheading font-size doesnt work here
+    font-size: 2.25rem;
+  }
 }
 
 .add-elements {
+  position: absolute;
+  top: 6.5rem;
+  // height: 80%;
+  right: 0;
   padding: 2rem;
-  z-index: 1;
-  background-color: lemonchiffon;
+  margin: 1rem;
+  z-index: 2;
+  background-color: $secondary-light-transparent;
+  border-radius: $border-radius;
+  box-shadow: 0 0 20px rgb(0 0 0 / 10%);
 }
 
 .toAdd {
   background-color: rgba(0, 0, 0, 0.1);
   position: relative;
   max-height: 7rem;
+
   max-width: 10rem;
 }
 
@@ -33,11 +60,9 @@
   }
 }
 .in-portal {
-  height: 70vh;
-  width: 70vw;
+  height: 100%;
   top: 5rem;
   left: 3rem;
-  background-color: lightyellow;
 }
 
 .element {
