--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -55,7 +55,15 @@
   }
   &__add-image-form {
     display: flex;
-    flex-direction: column;
+  }
+
+  &__add-image-input {
+    flex-grow: 1;
+    padding-left: 0.5rem;
+    height: 24px;
+    border: none;
+    font-size: 0.75rem;
+    border-radius: $border-radius;
   }
 }
 
@@ -105,6 +113,7 @@
 }
 
 .button {
+  background-color: inherit;
   width: fit-content;
   padding: 0;
   border: none;
