working on menu bar

--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -113,9 +113,5 @@
 }
 
 .button {
-  background-color: inherit;
-  width: fit-content;
-  padding: 0;
-  border: none;
-  padding-left: 0.5rem;
+  @include button-icon;
 }
