--- a/client/src/Components/TextEditor/TextEditor.scss
+++ b/client/src/Components/TextEditor/TextEditor.scss
@@ -1,9 +1,32 @@
 // TODO: make this sass compatible?
 
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
+
 .ProseMirror p.is-editor-empty:first-child::before {
   color: #adb5bd;
   content: attr(data-placeholder);
   float: left;
   height: 0;
   pointer-events: none;
+}
+
+.menu {
+  display: flex;
+  gap: 2px;
+  &__btn {
+    @include button-icon;
+    filter: invert(64%) sepia(28%) saturate(216%) hue-rotate(115deg)
+      brightness(93%) contrast(89%);
+
+    &--active {
+      @include button-icon;
+    }
+  }
+}
+
+.icon {
+  width: 1rem;
+  border: 1px solid black;
+  border-radius: 2px;
 }
