--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -2,17 +2,18 @@
 // primary - green
 $primary-background: #e8e8e4;
 $primary-medium: #d8e2dc;
+$primary-dark: #84a59d;
 // primary - pink
 $secondary-light: #f8edeb;
 $secondary-light-transparent: rgba(248, 237, 235, 0.5);
 
 $border-radius: 4px;
-$primary-dark: #323232;
-$primary-blue: #0095ff;
-$primary-grey: #afafaf;
-$primary-white: #ffffff;
-//secondary
-$secondary-dark: #000000;
-$secondary-blue: #0065ad;
-$secondary-grey: #e1e1e1;
-$secondary-white: #fafafa;
+// $primary-dark: #323232;
+// $primary-blue: #0095ff;
+// $primary-grey: #afafaf;
+// $primary-white: #ffffff;
+// //secondary
+// $secondary-dark: #000000;
+// $secondary-blue: #0065ad;
+// $secondary-grey: #e1e1e1;
+// $secondary-white: #fafafa;
