--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -79,6 +79,7 @@
   max-width: 90%;
   &:hover {
     background-color: rgba(0, 0, 0, 0.1);
+    border-radius: $border-radius;
   }
 }
 .in-portal {
@@ -89,25 +90,40 @@
 
 .element {
   padding: 0.25rem;
-  resize: both;
   overflow: auto;
   width: 11rem;
-  // width: fit-content;
+  &:hover {
+    resize: both;
+  }
   &__delete {
+    // display: none;
+    visibility: hidden;
     position: absolute;
     top: 0;
     right: 0;
-    background-color: inherit;
+    background-color: rgba(0, 0, 0, 0.01);
     font-size: 0.75rem;
     border: none;
-    color: red;
     padding: 0;
     cursor: pointer;
+    width: 1rem;
+    height: 1rem;
+    z-index: 2;
+  }
+
+  &__delete-icon {
+    @include button-icon;
+    width: 1rem;
   }
   &__image {
     width: 100%;
     pointer-events: none;
   }
+}
+
+// how to follow sass here?
+.element:hover .element__delete {
+  visibility: visible;
 }
 
 .button {
