moved sideboard to a new component

--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -14,6 +14,7 @@
     border-radius: $border-radius;
     display: flex;
     align-items: end;
+    width: fit-content;
   }
   &__heading {
     margin: 0;
@@ -28,40 +29,59 @@
   }
 }
 
-.sideboard {
-  position: absolute;
-  top: 6.5rem;
-  // height: 80%;
-  right: 0;
-  padding: 1.5rem;
-  margin: 1rem;
-  z-index: 2;
-  background-color: $secondary-light-transparent;
-  border-radius: $border-radius;
-  box-shadow: 0 0 20px rgb(0 0 0 / 10%);
-  display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
+// .sideboard {
+//   position: fixed;
+//   top: 0;
+//   // height: 80%;
+//   right: 0;
+//   padding: 1.5rem;
+//   padding-top: 0.75rem;
+//   margin: 1rem;
+//   z-index: 2;
+//   background-color: $secondary-light-transparent;
+//   border-radius: $border-radius;
+//   box-shadow: 0 0 20px rgb(0 0 0 / 10%);
+//   display: flex;
+//   flex-direction: column;
+//   gap: 0.75rem;
 
-  &__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
-  }
+//   &--minimized {
+//     padding: 0;
+//     margin: 1.75rem 2.5rem 0 0;
+//     border-radius: 50%;
+//   }
+//   &__minimize-btn {
+//     align-self: flex-end;
+//     border-radius: 50%;
+//     height: 1rem;
+//   }
+//   &__minimize-icon {
+//     @include icon;
+//     border: 1px solid black;
+//     border-radius: 50%;
+//     filter: invert(64%) sepia(28%) saturate(216%) hue-rotate(115deg)
+//       brightness(93%) contrast(89%);
+//   }
 
-  &__add-image-form {
-    display: flex;
-  }
+//   &__header {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: end;
+//   }
 
-  &__add-image-input {
-    flex-grow: 1;
-    padding-left: 0.5rem;
-    height: 24px;
-    border: none;
-    font-size: 0.75rem;
-    border-radius: $border-radius;
-  }
-}
+//   &__add-image-form {
+//     display: flex;
+//   }
+
+//   &__add-image-input {
+//     flex-grow: 1;
+//     padding-left: 0.5rem;
+//     height: 24px;
+//     border: none;
+//     font-size: 0.75rem;
+//     border-radius: $border-radius;
+//   }
+// }
 
 .toAdd {
   background-color: rgba(0, 0, 0, 0.1);
