--- a/client/src/Components/TextEditor/TextEditor.scss
+++ b/client/src/Components/TextEditor/TextEditor.scss
@@ -37,12 +37,7 @@
 }
 
 .icon {
-  min-width: 1rem;
-  width: 1rem;
-  height: 1rem;
-  border: 1px solid black;
-  border-radius: 2px;
-
+  @include icon;
   &--highlighter {
     padding: 2px;
   }
