--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -6,3 +6,11 @@
   padding: 0;
   border: none;
 }
+
+@mixin icon {
+  min-width: 1rem;
+  width: 1rem;
+  height: 1rem;
+  border: 1px solid black;
+  border-radius: 2px;
+}
