--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -2,10 +2,14 @@
 // primary - green
 $primary-background: #e8e8e4;
 $primary-medium: #d8e2dc;
-$primary-dark: #84a59d;
+// $primary-dark: #84a59d;
+$primary-dark: #1d3557;
 // primary - pink
 $secondary-light: #f8edeb;
-$secondary-light-transparent: rgba(248, 237, 235, 0.5);
+$primary-light: #a8dadc;
+// $secondary-light-transparent: rgba(248, 237, 235, 0.5);
+$secondary-light-transparent: #e6394644;
+$secondary-dark: #e63946;
 
 $border-radius: 4px;
 // $primary-dark: #323232;
