--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -10,7 +10,9 @@
     margin: 1rem;
     padding: 1rem;
     z-index: 1;
-    background: $primary-medium;
+    // background: $primary-medium;
+    color: white;
+    background: $primary-dark;
     border-radius: $border-radius;
     display: flex;
     align-items: end;
