--- a/client/src/styles/partials/_global.scss
+++ b/client/src/styles/partials/_global.scss
@@ -26,5 +26,5 @@ a {
 body {
   font-family: "Source Sans Pro";
   margin: 0;
-  background-color: $primary-background;
+  // background-color: $primary-background;
 }
