clicking on portal in header goes back to landing page

--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -11,8 +11,9 @@
     padding: 1rem;
     z-index: 1;
     // background: $primary-medium;
-    color: white;
-    background: $primary-dark;
+    // color: white;
+    // background: $primary-dark;
+    color: $primary-dark;
     border-radius: $border-radius;
     display: flex;
     align-items: end;
