--- a/client/src/Components/Portal/Portal.scss
+++ b/client/src/Components/Portal/Portal.scss
@@ -7,25 +7,13 @@
   position: relative;
   width: 100%; // overflow: hidden;
   &__header {
-    margin: 1rem;
-    margin-top: 0;
-    z-index: 1;
-    color: $primary-dark;
-    border-radius: $border-radius;
-    display: flex;
-    align-items: end;
-    width: fit-content;
+    @include main-header;
   }
   &__heading {
-    margin: 0;
-    margin-right: 1rem;
-    font-size: 3rem;
+    @include main-heading;
   }
   &__subheading {
-    // subheading font-size doesnt work here
-    font-size: 2.25rem;
-    display: flex;
-    align-items: flex-start;
+    @include subheading;
   }
 }
 
