--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -14,3 +14,26 @@
   border: 1px solid black;
   border-radius: 2px;
 }
+
+@mixin main-header {
+  margin: 1rem;
+  margin-top: 0.5rem;
+  z-index: 1;
+  color: $primary-dark;
+  border-radius: $border-radius;
+  display: flex;
+  align-items: baseline;
+  width: fit-content;
+}
+
+@mixin main-heading {
+  margin: 0;
+  margin-right: 1rem;
+  font-size: 3rem;
+}
+
+@mixin subheading {
+  font-size: 2.25rem;
+  display: flex;
+  align-items: flex-start;
+}
