made a hero banner for landing page

--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -7,4 +7,5 @@ $secondary-dark: #e63946;
 $secondary-dark-transparent: #e6394644;
 $secondary-light: #f1faee;
 
+$landing-main: #c5dedd;
 $border-radius: 4px;
