--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -16,8 +16,9 @@
 }
 
 @mixin main-header {
-  margin: 1rem;
-  margin-top: 0.5rem;
+  margin: 0;
+  padding: 1rem;
+  padding-top: 0.5rem;
   z-index: 1;
   color: $primary-dark;
   border-radius: $border-radius;
