--- a/client/src/styles/partials/_global.scss
+++ b/client/src/styles/partials/_global.scss
@@ -27,5 +27,6 @@ a {
 body {
   font-family: "Source Sans Pro";
   margin: 0;
+  color: $primary-dark;
   // background-color: $primary-background;
 }
