--- a/client/src/Components/Sideboard/Sideboard.scss
+++ b/client/src/Components/Sideboard/Sideboard.scss
@@ -16,17 +16,15 @@
   max-height: 100vh;
   overflow: scroll;
   gap: 0.75rem;
-  margin-right: -13rem;
-
   transition: margin-right 0.4s ease-in-out;
-  &:hover {
-    margin-right: 0;
-  }
 
   &--minimized {
     padding: 0;
     margin: 1.75rem 2.5rem 0 0;
     border-radius: 50%;
+  }
+  &__button {
+    @include button-icon;
   }
   &__toggle-btn {
     border-radius: 50%;
@@ -34,6 +32,7 @@
     margin-left: -1.5rem;
     background-color: $secondary-dark-transparent;
     align-self: center;
+    cursor: pointer;
   }
   &__minimize-icon {
     @include icon;
@@ -44,15 +43,18 @@
     display: flex;
     justify-content: space-between;
     align-items: end;
-    min-width: 11rem;
+    width: 11rem;
   }
 
   &__add-image-form {
+    width: 11rem;
     display: flex;
+    gap: 0.5rem;
   }
 
   &__add-image-input {
     flex-grow: 1;
+    width: 9rem;
     padding-left: 0.5rem;
     height: 24px;
     border: none;
