--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
 $primary-dark: #1d3557;
 $primary-medium: #a8dadc;
-$primary-light: #a8dadc;
+$primary-light: #f0efeb;
 
 $secondary-dark: #e63946;
 $secondary-dark-transparent: #e6394644;
