--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -12,7 +12,7 @@
   }
 }
 @mixin breakpoint-small {
-  @media (max-width: 500px) {
+  @media (max-width: 568px) {
     @content;
   }
 }
@@ -56,4 +56,9 @@
   font-weight: 400;
   display: flex;
   align-items: flex-start;
+
+  @include breakpoint-small {
+    font-size: 1.25rem;
+    font-weight: 600;
+  }
 }
