--- a/client/src/Components/Sideboard/Sideboard.scss
+++ b/client/src/Components/Sideboard/Sideboard.scss
@@ -26,6 +26,11 @@
   &__button {
     @include button-icon;
   }
+
+  &__link-icon {
+    padding-bottom: 2.5px;
+    padding-left: 2px;
+  }
   &__toggle-btn {
     border-radius: 50%;
     height: 1rem;
@@ -44,6 +49,10 @@
     justify-content: space-between;
     align-items: end;
     width: 11rem;
+  }
+
+  &__heading {
+    margin-left: 0.25rem;
   }
 
   &__add-image-form {
