changed styling of shadows

--- a/client/src/Components/Sideboard/Sideboard.scss
+++ b/client/src/Components/Sideboard/Sideboard.scss
@@ -10,7 +10,8 @@
   z-index: 2;
   background-color: $secondary-dark-transparent;
 
-  box-shadow: 0 0 20px rgb(0 0 0 / 10%);
+  // box-shadow: 0 0 20px rgb(0 0 0 / 10%);
+  box-shadow: 3px 3px 0px #eee;
   display: flex;
   flex-direction: column;
   max-height: 100vh;
