--- a/client/src/Components/YElement/YElement.scss
+++ b/client/src/Components/YElement/YElement.scss
@@ -58,7 +58,7 @@
     width: fit-content;
     border-radius: $border-radius;
     border: 1px solid $primary-dark;
-    padding: 0.1rem 1rem;
+    padding: 0.1rem 1rem 0.3rem 1rem;
     justify-content: space-around;
     gap: 0.5rem;
   }
