--- a/client/src/Components/Sideboard/Sideboard.scss
+++ b/client/src/Components/Sideboard/Sideboard.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   max-height: 100vh;
-  overflow: scroll;
+  overflow: auto;
   gap: 0.75rem;
   transition: margin-right 0.4s ease-in-out;
 
