--- a/client/src/Components/Sideboard/Sideboard.scss
+++ b/client/src/Components/Sideboard/Sideboard.scss
@@ -28,6 +28,7 @@
     @include button-icon;
   }
 
+  // icon made in inkscape, not the same as other icons
   &__link-icon {
     padding-bottom: 2.5px;
     padding-left: 2px;
@@ -80,5 +81,3 @@
     border-radius: $border-radius;
   }
 }
-
-//
